--- a/applications/nrf5340_audio/overlay-debug.conf
+++ b/applications/nrf5340_audio/overlay-debug.conf
@@ -19,8 +19,8 @@ CONFIG_SERIAL=y
 # Logging
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
-CONFIG_LOG_BACKEND_UART=y
-CONFIG_LOG_BACKEND_RTT=n
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_LOG_TAG_MAX_LEN=2
@@ -29,17 +29,17 @@ CONFIG_LOG_TAG_DEFAULT="--"
 # Console related defines
 CONFIG_CONSOLE=y
 CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=y
+CONFIG_UART_CONSOLE=n
 
 # Shell related defines
-CONFIG_SHELL=y
-CONFIG_KERNEL_SHELL=y
+CONFIG_SHELL=n
+CONFIG_KERNEL_SHELL=n
 CONFIG_USE_SEGGER_RTT=y
 ## Disable logs on RTT
-CONFIG_SHELL_RTT_INIT_LOG_LEVEL_NONE=y
-CONFIG_SHELL_BACKEND_RTT=y
+CONFIG_SHELL_RTT_INIT_LOG_LEVEL_NONE=n
+CONFIG_SHELL_BACKEND_RTT=n
 CONFIG_SHELL_BACKEND_SERIAL=n
-CONFIG_SHELL_VT100_COLORS=y
+CONFIG_SHELL_VT100_COLORS=n
 CONFIG_SHELL_STACK_SIZE=1024
 CONFIG_SHELL_CMD_BUFF_SIZE=128
 ## Reduce shell memory usage
