--- a/applications/nrf5340_audio/overlay-gateway.conf
+++ b/applications/nrf5340_audio/overlay-gateway.conf
@@ -11,6 +11,7 @@ CONFIG_AUDIO_DEV=2
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_BROADCASTER=y
 CONFIG_BT_VCS_CLIENT=y
+CONFIG_BT_VCS=n
 CONFIG_BT_DEVICE_NAME="NRF5340_AUDIO"
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
