--- a/applications/nrf5340_audio/overlay-headset.conf
+++ b/applications/nrf5340_audio/overlay-headset.conf
@@ -8,7 +8,9 @@
 CONFIG_AUDIO_DEV=1
 
 # General
+CONFIG_BT_CENTRAL=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_VCS_CLIENT=n
 CONFIG_BT_VCS=y
 
 # Temporarily disabled connection parameter update request from peripheral
@@ -16,8 +18,9 @@ CONFIG_BT_VCS=y
 CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=n
 
 # Dual CIS demo requires headset to accept one ACL connection and one ISO channel
-CONFIG_BT_MAX_CONN=1
+CONFIG_BT_MAX_CONN=2
 CONFIG_BT_ISO_MAX_CHAN=1
+CONFIG_BT_MAX_PAIRED=2
 
 CONFIG_LC3_ENC_CHAN_MAX=1
 CONFIG_LC3_DEC_CHAN_MAX=1
